[package]
name = "potato-investor"
version = "0.1.0"
authors = ["Janno Põldma <janno.poldma@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.11"
config = "0.9.1"
env_logger = "0.6.0"
eventstore = "0.2.2"
futures = "0.1.25"
lazy_static = "1.2.0"
log = "0.4.6"
regex = "1.1.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
serenity = "0.5.11"
typemap = "*"
uuid = "0.7.1"
